--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -28,11 +28,18 @@ app-managefeature {
 
     --background: transparent !important;
 
-    ion-slide {
+    ion-col {
       box-shadow: 0 5px 10px rgba(0,0,0,.2);
-      //padding: 10px;
+      padding: 5px;
       margin: 5px;
       border-radius: 10px;
+      ion-item {
+        .menu-label {
+          font-size: 12px !important;
+          margin-left: 4px;
+        }
+        --inner-padding-end: 0;
+      }
     }
   }
 
@@ -45,22 +52,14 @@ app-managefeature {
     background-color: #e2666a !important;
   }
 
-  ion-item {
-    .menu-label {
-      font-size: 10px !important;
-      margin-left: 4px;
-    }
-    --inner-padding-end: 0;
-  }
-
   ion-router-outlet {
     border-left: 1px solid var(--ion-color-lightgrey);
   }
 
-  ion-content {
+/*  ion-content {
     display: flex;
     flex-direction: column;
-  }
+  }*/
 
   .bold-font {
     font-weight: bold;
