--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -55,7 +55,7 @@
     <ion-grid class="program-grid">
       <ion-row class="program-row">
         <ion-col class="ion-align-self-center" *ngFor="let sample of samples; index as i" size-xs="6" size-sm="4" size-md="3" size-lg="3" size-xl="3" [hidden]="!((sample.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || sample.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1) && !sample.array_boolean[1])">
-          <ion-card class="program-card" (click)="pushToMessagePage($event, sample)">
+          <ion-card class="program-card" (click)="openChildActivity($event, sample)">
             <ion-card-header class="ion-no-padding">
               <div class="program-photo-container">
                 <ion-img class="program-photo" [src]="(sample.assets && sample.assets.length && sample.assets[0]) | background: sample._id"></ion-img>
