--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -1,4 +1,4 @@
-<ion-header *ngIf="modalPage || !(router.url.includes('discover/home') || router.url.includes('manage/activity'))"> <!--hide header if embedded in Discover page or Manage community/program mode-->
+<ion-header *ngIf="modalPage || isSubpanel || !(router.url.includes('discover/home') || router.url.includes('manage/activity'))"> <!--hide header if embedded in Discover page or Manage community/program mode-->
   <ion-toolbar>
     <ion-menu-toggle menu="main" *ngIf="!modalPage && userData.user" slot="start" fill="clear" id='menuToggle'>
       <ion-button fill="clear" color="grey">
@@ -452,7 +452,7 @@
       <ion-item *ngIf="item === 12000" lines="none" class="ion-no-padding">
         <ion-grid>
           <ion-row class="note-row">
-            <ion-col *ngFor="let note of notes; index as i" size-xs="6" size-sm="4" size-md="4" size-lg="3" size-xl="2">
+            <ion-col *ngFor="let note of notes; index as i" size="auto">
               <ion-card class="note-card" (click)="openNote(note)">
                 <div class="note-header">
                   <ion-label class="note-title">{{note.question || note.calendar_title || note.content_title}}</ion-label>
