--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,5 +91,5 @@
     </ion-menu>
     <ion-router-outlet id="main-app" [swipeGesture]="false"></ion-router-outlet>
   </ion-split-pane>
-  <ion-router-outlet name="sub" id="sub-panel" *ngIf="router.url.includes('(sub:') && platform.width() >= 768"></ion-router-outlet>
+  <ion-router-outlet name="sub" id="sub-panel" [hidden]="!router.url.includes('(sub:') || platform.width() < 768"></ion-router-outlet>
 </ion-app>
