--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -1,4 +1,4 @@
-<ion-header *ngIf="modalPage || isSubpanel || !(router.url.includes('discover/home') || router.url.includes('manage/activity'))"> <!--hide header if embedded in Discover page or Manage community/program mode-->
+<ion-header *ngIf="modalPage || subPanel || !(router.url.includes('discover/home') || router.url.includes('manage/activity'))"> <!--hide header if embedded in Discover page or Manage community/program mode-->
   <ion-toolbar>
     <ion-menu-toggle menu="main" *ngIf="!modalPage && userData.user" slot="start" fill="clear" id='menuToggle'>
       <ion-button fill="clear" color="grey">
@@ -21,7 +21,7 @@
           <ion-icon name="albums"></ion-icon>
         </ion-button>
       </div>
-      <div *ngIf="relationshipId && calendarItem && moment && moment.array_boolean && (moment.array_boolean.length <= 9 || !moment.array_boolean[9])">
+      <div *ngIf="relationshipId && calendarItem && moment && moment.array_boolean && (moment.array_boolean.length <= 9 || !moment.array_boolean[9])"> <!--if content calendar and show Content Edit Controls to Users-->
         <ion-button (click)="deleteCalendarItem($event)" class="ion-margin-end">
           <ion-icon name="trash-outline"></ion-icon>
         </ion-button>
@@ -29,9 +29,14 @@
           Save
         </ion-button>
       </div>
-      <ion-button (click)="inviteToJoin()" *ngIf="authService.token && setupPermissionCompleted && loadStatus" [hidden]="relationshipId && calendarItem && moment && moment.array_boolean && (moment.array_boolean.length <= 9 || !moment.array_boolean[9])">
-        <ion-icon name="person-add"></ion-icon>
-      </ion-button>
+      <div *ngIf="authService.token && setupPermissionCompleted && loadStatus">
+        <ion-button (click)="inviteToJoin()" [hidden]="subPanel || relationshipId && calendarItem && moment && moment.array_boolean && (moment.array_boolean.length <= 9 || !moment.array_boolean[9])"> <!--hide if subpanel or if content calendar and show Content Edit Controls to Users-->
+          <ion-icon name="person-add"></ion-icon>
+        </ion-button>
+        <ion-button (click)="router.navigate([{ outlets: { sub: null }}])" [hidden]="!subPanel"> <!--close subpanel-->
+          <ion-icon name="close"></ion-icon>
+        </ion-button>
+      </div>
       <ion-button id="signin" *ngIf="!authService.token" (click)="openRegister(0, '')">
         <ion-text>Sign In</ion-text>
       </ion-button>
